2009-05-30  Nikolas Zimmermann  <nikolas.zimmermann@torchmobile.com>

        Reviewed by Darin Adler.

        Fixes: https://bugs.webkit.org/show_bug.cgi?id=25979

        Fix regression, local WML files won't load anymore, as the mimetype isn't correctly detected.    
        Bug filed at <rdar://problem/6917571> to cover this CFNetwork limitation.

        * platform/network/mac/ResourceHandleMac.mm:
        (-[WebCoreResourceHandleAsDelegate connection:didReceiveResponse:]):

2009-05-29  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=26091
        Make storage events match the current spec.
        - Storage event listeners are added to the window.
        - Storage events are dispatched to the window.

        Updated existing tests.

        * dom/Document.cpp:
        (WebCore::Document::dispatchWindowEvent):
        * dom/Document.h:
        * dom/Node.cpp:
        * dom/Node.h:
        * html/HTMLBodyElement.cpp:
        (WebCore::HTMLBodyElement::parseMappedAttribute):
        * storage/LocalStorageArea.cpp:
        (WebCore::LocalStorageArea::dispatchStorageEvent):
        * storage/SessionStorageArea.cpp:
        (WebCore::SessionStorageArea::dispatchStorageEvent):

2009-05-30  Darin Adler  <darin@apple.com>

        Reviewed by Adele Peterson.

        Bug 26097: REGRESSION (r44283): Tab key doesn't work when focus is on a <select> element

        Test: fast/forms/focus-control-to-page.html

        * dom/SelectElement.h: Made destructor protected. Tweaked a bit.

        * html/HTMLSelectElement.cpp: Removed unneeded includes.
        (WebCore::HTMLSelectElement::remove): Removed unneeded range check of the
        result of optionToListIndex.
        (WebCore::HTMLSelectElement::parseMappedAttribute): Removed code to set the
        unused attribute, m_minwidth.
        (WebCore::HTMLSelectElement::defaultEventHandler): The actual bug fix.