@@ -84,6 +84,12 @@ const char* PluginView::userAgent()
     return 0;
 }
 
+const char* PluginView::userAgentStatic()
+{
+    notImplemented();
+    return 0;
+}
+
 NPError PluginView::handlePostReadFile(Vector<char>&, uint32, const char*)
 {
     notImplemented();
@@ -92,6 +98,12 @@ NPError PluginView::handlePostReadFile(Vector<char>&, uint32, const char*)
 }
 
 NPError PluginView::getValue(NPNVariable, void*)
+{
+    notImplemented();
+    return 0;
+}
+
+NPError PluginView::getValueStatic(NPNVariable variable, void* value)
 {
     notImplemented();
     return 0;
