@@ -1,3 +1,11 @@
+2009-05-30  Kevin Ollivier  <kevino@theolliviers.com>
+
+        Build fix for platforms without plugins support.
+
+        * plugins/PluginViewNone.cpp:
+        (WebCore::PluginView::userAgentStatic):
+        (WebCore::PluginView::getValueStatic):
+
 2009-05-30  Nikolas Zimmermann  <nikolas.zimmermann@torchmobile.com>
 
         Reviewed by Darin Adler.
